--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/fabric": "^4.5.1",
     "fabric": "^4.5.1",
     "firebase": "^7.0 || ^8.0",
+    "light-async-polling": "^1.0.2",
     "ngx-color-picker": "^11.0.0",
     "rxjs": "~6.6.0",
     "rxjs-compat": "^6.6.7",
@@ -34,7 +35,7 @@
     "@angular/cli": "~12.1.3",
     "@angular/compiler-cli": "~12.1.0-",
     "@types/jasmine": "~3.8.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.17",
     "firebase-tools": "^8.0.0 || ^9.0.0",
     "fuzzy": "^0.1.3",
     "inquirer": "^6.2.2",
